# lpm

./: .gitignore  .goreleaser.yml  CMakeLists.txt  README.md  ]  base.cpp  base.hpp  cli_base.hpp  commands.hpp  delete.cpp  go.mod  install.cpp  linux_install.sh  list.cpp  main.cpp  main.go  rel.sh
.github/workflows/: release.yml
base/: fuzzy_find_plugin.go  lazy_install.go  neovim_path.go  version.go  when_multiple_plugins_found.go
cli/: cli.go  fetch.go  help.go
commands/: able.go  cat.go  install_plugin.go  list.go  remove.go
go/: main.go  todo.txt
go/base/: check_nvim.go  fs.go  fuzzy_find_plugin.go  lazy_sync.go  log.go  neovim_path.go
go/cli/: cli.go
go/commands/: cat.go  install_lazy.go  install_plugin.go  list.go  remove.go  sync.go
homebrew/Formula/: lpm.rb
include/: base.hpp  cli_base.hpp  commands.hpp  fsio.hpp  lazy_config.hpp
plugins_config/: blink-cmp.lua  blink.lua  mason-lspconfig.lua  trouble.lua
src/: base.cpp  cli_base.cpp  fsio.cpp  main.cpp
src/commands/: able.cpp  activate.cpp  cat.cpp  deactivate.cpp  delete.cpp  edit.cpp  include.cpp  install.cpp  install_lazy.cpp  list.cpp  remove.cpp  self_update.cpp  sync.cpp  utils.cpp
t/: CMakeLists.txt
