cmake_minimum_required(VERSION 3.16)
project(lazynvimcli CXX)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(BUILD_SHARED_LIBS         OFF)
set(CURL_STATICLIB            ON)
set(BUILD_CURL_EXE            OFF)
set(HTTP_ONLY                 ON)
set(CURL_USE_OPENSSL          ON)
set(CURL_DISABLE_TESTS        ON)
set(BUILD_TESTING             OFF)
set(CURL_DISABLE_DOCS         ON)
set(CURL_DISABLE_EXAMPLES     ON)
set(CURL_ENABLE_EXPORT_TARGET OFF)
set(CURL_DISABLE_INSTALL      ON)
set(CURL_USE_LIBPSL           OFF CACHE BOOL "" FORCE)
set(CURL_USE_LIBSSH2          OFF CACHE BOOL "" FORCE)
set(CURL_USE_NGHTTP2          OFF CACHE BOOL "" FORCE)
set(CURL_USE_LIBIDN2          OFF CACHE BOOL "" FORCE)
set(CURL_DISABLE_LDAP         ON  CACHE BOOL "" FORCE)
set(CURL_DISABLE_LDAPS        ON  CACHE BOOL "" FORCE)
add_subdirectory(third_party/curl)

file(GLOB_RECURSE SRC_FILES "src/*.cpp")
set(CLI_NAME lpm)
add_executable(${CLI_NAME} ${SRC_FILES})
target_include_directories(${CLI_NAME} PRIVATE
    third_party/curl/include
    include
)
target_link_libraries(${CLI_NAME} PRIVATE libcurl_static)
if(WIN32)
  target_link_libraries(${CLI_NAME} PRIVATE ws2_32 wldap32 crypt32 normaliz)
endif()
if(MSVC)
  target_compile_options(${CLI_NAME} PRIVATE /W4 /WX)
else()
  target_compile_options(${CLI_NAME} PRIVATE -Wall -Wextra -Wpedantic -Werror)
endif()

find_program(CLANG_TIDY clang-tidy)
if(CLANG_TIDY)
  set_target_properties(${CLI_NAME} PROPERTIES
        CXX_CLANG_TIDY "${CLANG_TIDY};--extra-arg=-std=c++17"
    )
endif()

install(TARGETS ${CLI_NAME} RUNTIME DESTINATION bin)
